--- a/01_front_first-practice/application/index.html
+++ b/01_front_first-practice/application/index.html
@@ -3,13 +3,17 @@
     <meta charset="utf-8">
 
     <title>My First App</title>
+
+    <style>
+      #animals {
+        background-color: red;
+      }
+    </style>
   </head>
 
   <body>
-    <ul>
-      <li>One</li>
-      <li>Two</li>
-      <li>Three</li>
+    <ul id="animals">
+      <li>Horse</li>
     </ul>
 
     <script type="text/javascript">
@@ -17,6 +21,7 @@
       var myText    = "hello, how are you?";
       var myDecimal = 10.90;
       var myList    = new Array();
+      var myList2   = new Array();
       var myTime    = new Date();
 
       // for adding elements to a list/array
@@ -37,9 +42,24 @@
           name: "John",
           surname: "Maeda",
           phone_num: "0034626670156",
-          address: "Rue del Percebe, 21"
+          address: "Rue del Percebe, 21",
+          giveMeTheResult: function(number1, number2) {
+            return number1 + number2;
+          }
         }
-      };
+      }
+
+      function addAnElementToList() {
+        var number = 0;
+      }
+
+      function giveMeTheResult(number1, number2) {
+        return number1 + number2;
+      }
+
+      var test = function giveMeAnotherTheResult(number1, number2) {
+        return number1 + number2;
+      }
     </script>
   </body>
 </html>
