--- a/02_front_httprequest/application/index.html
+++ b/02_front_httprequest/application/index.html
@@ -1,141 +1,62 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head lang="en">
     <meta charset="utf-8">
-    <!--meta http-equiv="X-UA-Compatible" content="IE=edge"-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>My Calculator</title>
+    <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
-    <title>My First App</title>
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 
-    <link rel="stylesheet" href="css/bootstrap.css" media="screen">
-    <link rel="stylesheet" href="css/bootstrap-theme.css" media="screen">
-  </head>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $("button").click(function ()
+            {
+                var oldVal = $("#mainField").val();
+                if ($(this).text() != "=" && ($(this).text()) != "←")
+                    $("#mainField").val(oldVal+$(this).text());
+                if ($(this).text() == "←" && oldVal.length > 0)
+                    $("#mainField").val(oldVal.substr(0,oldVal.length - 1));
+            });
+            $("#calculateButton").click(function ()
+            {
+                eval("$('#mainField').val(" + $('#mainField').val() + ")");
+            });
+        });
+    </script>
+</head>
+<body>
 
-  <body>
-    <div class="container">
+<div id="wrappedContainer" class="container">
+    <input type="text" style="width:40%" id="mainField"/>
 
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Brand</a>
-          </div>
-
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-              <li><a href="#">Link</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
-            </ul>
-            <form class="navbar-form navbar-left" role="search">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
-              </div>
-              <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Link</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-      </nav>
-
-      <div class="jumbotron">
-        <h1>Hello, world!</h1>
-        <div class="input-group">
-          <span class="input-group-addon" id="basic-addon1">@</span>
-          <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
-        </div>
-
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-addon2">
-          <span class="input-group-addon" id="basic-addon2">@example.com</span>
-        </div>
-
-        <div class="input-group">
-          <span class="input-group-addon">$</span>
-          <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
-          <span class="input-group-addon">.00</span>
-        </div>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-      </div>
-
-      <!--div class="row">
-        <div class="col-md-1">.col-md-1</div>
-        <div class="col-md-1">.col-md-1</div>
-        <div class="col-md-1">.col-md-1</div>
-        <div class="col-md-1">.col-md-1</div>
-        <div class="col-md-1">.col-md-1</div>
-        <div class="col-md-1">.col-md-1</div>
-        <div class="col-md-1">.col-md-1</div>
-        <div class="col-md-1">.col-md-1</div>
-        <div class="col-md-1">.col-md-1</div>
-        <div class="col-md-1">.col-md-1</div>
-        <div class="col-md-1">.col-md-1</div>
-        <div class="col-md-1">.col-md-1</div>
-      </div>
-      <div class="row">
-        <div class="col-md-8">.col-md-8</div>
-        <div class="col-md-4">.col-md-4</div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">.col-md-4</div>
-        <div class="col-md-4">.col-md-4</div>
-        <div class="col-md-4">.col-md-4</div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">.col-md-6</div>
-        <div class="col-md-6">.col-md-6</div>
-      </div-->
+    <div class="row">
+        <div class="col-md-1"><button>7</button></div>
+        <div class="col-md-1"><button>8</button></div>
+        <div class="col-md-1"><button>9</button></div>
+        <div class="col-md-1"><button>(</button></div>
+        <div class="col-md-1"><button>)</button></div>
+        <div class="col-md-1"><button>←</button></div>
     </div>
-
-    <script src="js/jquery-1.11.2.js"></script>
-    <script src="js/bootstrap.js"></script>
-
-    <!--button onclick="getWeatherData()">get data</button>
-
-    <script type="text/javascript">
-      var serverResponse;
-
-      function getWeatherData() {
-        var weatherData = new XMLHttpRequest();
-
-        weatherData.open('GET', 'http://api.openweathermap.org/data/2.5/weather?q=Barcelona,es', true);
-        weatherData.responseType = 'json';
-        weatherData.onload = function() {
-          serverResponse = weatherData.response;
-          console.log(weatherData.response.weather[0].description)
-        }
-        weatherData.send();
-      }
-    </script-->
-  </body>
+    <div class="row">
+        <div class="col-md-1"><button>4</button></div>
+        <div class="col-md-1"><button>5</button></div>
+        <div class="col-md-1"><button>6</button></div>
+        <div class="col-md-1"><button>-</button></div>
+        <div class="col-md-1"><button>+</button></div>
+        <div class="col-md-1"><button>/</button></div>
+    </div>
+    <div class="row">
+        <div class="col-md-1"><button>1</button></div>
+        <div class="col-md-1"><button>2</button></div>
+        <div class="col-md-1"><button>3</button></div>
+        <div class="col-md-1"><button>*</button></div>
+        <div class="col-md-2"><button id="calculateButton">=</button></div>
+    </div>
+</div>
+</body>
 </html>
