--- a/js_accelerometer_beat_detect/application/index.html
+++ b/js_accelerometer_beat_detect/application/index.html
@@ -6,11 +6,18 @@
   </head>
 
   <body>
+    <h1>BPM: not yet detected</h1>
+
     <script src="jquery-1.11.2.min.js"></script>
     <script type="text/javascript">
+      // accelerometer
       var acc, pAcc;
       acc = [0, 0, 0]
       pAcc = [0, 0, 0]
+
+      // time
+      var millis = new Date();
+      var pastMillis = 0;
 
       function processMotionData(event) {
         /**************************************************************
@@ -32,9 +39,16 @@
 
       setInterval(function() {
 
-         var period;
+        if (pAcc[0]<0 && acc[0]>0) {
+          // BPM detection
+          var period = millis.getTime() - pastMillis;  //Calculates how much time has past since we last crossed zero by subtracting the pastMillis value to the current one.
+          var BPM = 60/(period/1000);                  //Calculates the equivalent BPM to the period that has just been calculated above.
 
+          console.log("-Period: " + period + "ms. -BPM: " + BPM);
+          $("body").html("<h1>BPM: " + BPM + "</h1>");
 
+          pastTime = millis.getTime();
+        }
 
       }, 250);
 
